[gd_scene load_steps=18 format=3 uid="uid://cn4fsgay8bat0"]

[ext_resource type="PackedScene" uid="uid://c6848nhfw7043" path="res://Scenes/Road_Entities.tscn" id="1_8tk2h"]
[ext_resource type="Script" path="res://Scripts/main_scene.gd" id="1_lba7u"]
[ext_resource type="PackedScene" uid="uid://bgj0lbsa3ichv" path="res://Scenes/Road_Background.tscn" id="2_oqqeb"]
[ext_resource type="Texture2D" uid="uid://dwkanrtrw81" path="res://Textures/progressbg.png" id="4_6w7t6"]
[ext_resource type="Script" path="res://Scripts/progress_bar.gd" id="4_v3kwh"]
[ext_resource type="Script" path="res://Scripts/speedometer.gd" id="5_84ib4"]
[ext_resource type="Texture2D" uid="uid://b5ynigynhk4gx" path="res://Textures/Obstacles/stick.png" id="5_whl3i"]
[ext_resource type="Texture2D" uid="uid://umjcat12vtnf" path="res://Textures/speedometer.png" id="6_oa5wl"]
[ext_resource type="Script" path="res://Scripts/distance.gd" id="8_hta84"]
[ext_resource type="Texture2D" uid="uid://cqrts0dnqc5h" path="res://Textures/progressbar.png" id="8_vc4eb"]
[ext_resource type="Script" path="res://Scripts/timer_node.gd" id="11_ee2rj"]
[ext_resource type="FontFile" uid="uid://bhuhi4yo5rvro" path="res://Fonts/yoster.ttf" id="12_facu8"]
[ext_resource type="AudioStream" uid="uid://q5hwgj4frx46" path="res://Sounds/drumss.wav" id="13_4imob"]
[ext_resource type="AudioStream" uid="uid://bhmvlam3rjy85" path="res://Sounds/music for editing if ure good at it/melodyslow.mp3" id="14_hlef5"]
[ext_resource type="AudioStream" uid="uid://bqyexx378xkqs" path="res://Sounds/music for editing if ure good at it/melodymid.mp3" id="15_4e43x"]

[sub_resource type="Shader" id="Shader_w38rg"]
code = "shader_type canvas_item;

void vertex() {
	// Called for every vertex the material is visible on.
}

void fragment() {
	// Called for every pixel the material is visible on.
}

//void light() {
	// Called for every pixel for every light affecting the CanvasItem.
	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lxy65"]
shader = SubResource("Shader_w38rg")

[node name="Main" type="Node2D"]
material = SubResource("ShaderMaterial_lxy65")
script = ExtResource("1_lba7u")

[node name="RoadBackground" parent="." instance=ExtResource("2_oqqeb")]

[node name="Road_Entities" parent="." instance=ExtResource("1_8tk2h")]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.34336, 0.366947, 0.779108, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 152.0
offset_top = 136.0
offset_right = 208.0
offset_bottom = 812.0
max_value = 5000.0
fill_mode = 3
texture_under = ExtResource("4_6w7t6")
texture_progress = ExtResource("8_vc4eb")
script = ExtResource("4_v3kwh")

[node name="Speedometer" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_top = 314.0
offset_right = 40.0
offset_bottom = 354.0
scale = Vector2(0.669978, 0.684543)
script = ExtResource("5_84ib4")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Speedometer"]
layout_mode = 0
offset_left = 180.0
offset_top = 852.0
offset_right = 393.0
offset_bottom = 1070.0
texture = ExtResource("6_oa5wl")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Speedometer/TextureRect"]
layout_mode = 0
offset_left = 111.054
offset_top = 40.566
offset_right = 256.054
offset_bottom = 80.566
text = "NIIICE"

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/Speedometer/TextureRect"]
layout_mode = 0
offset_left = 102.099
offset_top = 154.511
offset_right = 247.099
offset_bottom = 194.511
text = "lame >:("

[node name="RichTextLabel3" type="RichTextLabel" parent="CanvasLayer/Speedometer/TextureRect"]
layout_mode = 0
offset_left = 97.6209
offset_top = 96.0775
offset_right = 242.621
offset_bottom = 136.077
text = "getting there"

[node name="Needle" type="TextureRect" parent="CanvasLayer/Speedometer"]
layout_mode = 0
offset_left = 201.0
offset_top = 949.0
offset_right = 382.0
offset_bottom = 989.0
texture = ExtResource("5_whl3i")

[node name="TimerNode" type="Control" parent="CanvasLayer"]
light_mask = 1023
visibility_layer = 1023
layout_mode = 3
anchors_preset = 0
offset_left = 1510.0
offset_top = 150.0
offset_right = 1550.0
offset_bottom = 190.0
script = ExtResource("11_ee2rj")

[node name="TimerLabel" type="Label" parent="CanvasLayer/TimerNode"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.986752, 0.986752, 0.986752, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("12_facu8")
theme_override_font_sizes/font_size = 54

[node name="Timer" type="Timer" parent="CanvasLayer/TimerNode"]
wait_time = 120.0

[node name="Distance" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_hta84")

[node name="Drums" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_4imob")
panning_strength = 0.0

[node name="Slow" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_hlef5")
panning_strength = 0.0

[node name="Normal" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_4e43x")
panning_strength = 0.0

[connection signal="finished" from="Drums" to="." method="_on_drums_finished"]
[connection signal="finished" from="Slow" to="." method="_on_slow_finished"]
[connection signal="finished" from="Normal" to="." method="_on_normal_finished"]
